--- a/desserts.html
+++ b/desserts.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>My recipe book |Drinks</title>
+        <title>My recipe book |desserts</title>
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="fontawesome/css/all.css">
     </head>
@@ -14,28 +14,28 @@
         </div>
         <div id="meals">
             <div class="meals-list">
-                <a href="strawberry-milkshake.html">
+                <a href="carrot-cake.html">
                     <div class="meals-list-item">
-                        <h1>Strawberry-milkshake<i class="fas fa-arrow-circle-right"></i></h1>
-                        <p>whip creame</p>
+                        <h1>Carrot Cake<i class="fas fa-arrow-circle-right"></i></h1>
+                        <p>icing sugar</p>
                     </div>
                 </a>
-                <a href="mango mastan.html">
+                <a href="custard-trifle.html">
                     <div class="meals-list-item">
-                        <h1>Mango mastan<i class="fas fa-arrow-circle-right"></i></h1>
-                        <p>mango</p>
+                        <h1>Custard trifle<i class="fas fa-arrow-circle-right"></i></h1>
+                        <p>Custard</p>
                     </div>
                 </a>
-                <a href="cold coffee.html">
+                <a href="fruit kebabs.html">
                     <div class="meals-list-item">
-                        <h1>Cold coffee<i class="fas fa-arrow-circle-right"></i></h1>
-                        <p>milk</p>
+                        <h1>Fruit Kabab<i class="fas fa-arrow-circle-right"></i></h1>
+                        <p>Fruits </p>
                     </div>
                 </a> 
-                <a href="malibu sunset.html">
+                <a href="fruit and nut yogurt parfait.html">
                     <div class="meals-list-item">
-                        <h1>Malibu sunset<i class="fas fa-arrow-circle-right"></i></h1>
-                        <p>Pineapple Juice</p>
+                        <h1>Fruit and nut yogurt parfait<i class="fas fa-arrow-circle-right"></i></h1>
+                        <p>Fresh berries</p>
                     </div>
                 </a> 
             </div>
