--- a/index.html
+++ b/index.html
@@ -1,22 +1,19 @@
-<!DOCTYPE hmtl>
+<!DOCTYPE html>
 <html>
     <head>
-        <title>My Food</title>
+        <title>My recipe book</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body class="body-home">
-        <div id="Home">
-            <img src="images/my logo.png" id="home-logo-img">
-            <img src="images/my mom logo.png" id="home-logo-text">
-            <div class="Home-menu">
-                <a href="meals.html" class="Home-menu-item">
-                    <p>MEALS</p>
-                </a>
-                 <a href="drinks.html" class="Home-menu-item">
-                    <p>DRINKS</p>
-                </a>
-                 <a href="deserts.html" class="Home-menu-item">
-                    <p>DESERTS</p>
+        <div id="home">
+            <img src="images/my mom logo.png" id="home-logo-img">
+            <div class="home-menu">
+                <a href="meals.html" class="home-menu-item">
+                   <p>meals</p> 
+                 <a href="drinks.html" class="home-menu-item">
+                   <p>drinks</p> 
+                <a href="desserts.html" class="home-menu-item">
+                   <p>deserts</p> 
                 </a>
             </div>
         </div>
