--- a/meals.html
+++ b/meals.html
@@ -1,23 +1,47 @@
-<!DOCTYPE hmtl>
+<!DOCTYPE html>
 <html>
     <head>
-        <title>My Mane | Meals</title>
+        <title>My recipe book |meals</title>
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="fontawesome/css/all.css">
     </head>
     <body class="body-meals">
-        <div class="header">    
+        <div class="header">
             <a href="index.html">
-            <i class="fas fa-arrow-left"></i>
+                <i class="fas fa-arrow-left"></i>
             </a>
             <img src="images/logo-text.png">
         </div>
         <div id="meals">
             <div class="meals-list">
-                <a href="grilledcheese.html">
+                <a href="italian sausage.html">
+                    <div class="meals-list-img">
+                        <h1>Italian Chicken potatoes<i class="fas fa-arrow-circle-right"></i></h1>
+                        <p>chicken</p>
+                    </div>
+                </a> 
+                <a href="tomato lasangne.html">
                     <div class="meals-list-item">
-                        <h1>Grilled Cheese Sandwich<i class="fas fa-chevron-right"></i></h1>  
-                        <p>Extra Cheesy Grilled Sandwich</p>
+                        <h1>Tomato lasangne<i class="fas fa-arrow-circle-right"></i></h1>
+                        <p>Tomato</p>
+                    </div>
+                </a>
+                <a href="bistcuit sandwich.html">
+                    <div class="meals-list-item">
+                        <h1>Bistcuit sandwich<i class="fas fa-arrow-circle-right"></i></h1>
+                        <p>tomato </p>
+                    </div>
+                </a> 
+                <a href="italian-sausage pigs.html">
+                    <div class="meals-list-item">
+                        <h1>ITALIAN SAUSAGE<i class="fas fa-arrow-circle-right"></i></h1>
+                        <p>pigs-in-blankets</p>
+                    </div>
+                </a>
+                <a href="goats-cheese-pear.html">
+                    <div class="meals-list-item">
+                        <h1>GOATS CHEESE PEAR<i class="fas fa-arrow-circle-right"></i></h1>
+                        <p>walnut-tartines</p>
                     </div>
                 </a>
             </div>
